# ucxx-communicator-test

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.optimized  Dockerfile.perftest  README.md  aws_client.sh  aws_server.sh  big_client.sh  communicator.sh  create_docker.sh  run_comms_client.sh  run_comms_server.sh  scalability_test.sh  shell.sh  small_client.sh  small_server.sh  start_docker_AWS.sh  start_docker_sally.sh
CMake/resolve_dependency_modules/: cudf.cmake
cpp/: Acceptor.cpp  Acceptor.h  CMakeLists.txt  CommElement.h  Communicator.cpp  Communicator.h  EndpointRef.cpp  EndpointRef.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h  StateTransitionMetrics.cpp  StateTransitionMetrics.h  WorkQueue.h  commsMain.cpp  protocol.cpp  protocol.h  util.cpp  util.h
